getFirst() and switch